--- a/1. Python笔记/4. 模块和包.md
+++ b/1. Python笔记/4. 模块和包.md
@@ -56,7 +56,7 @@ for item in lst
 
 输出路径
 
-![image-20221121110758121](iamges\模块搜索路径)
+![image-20221121110758121](./iamges/模块搜索路径)
 
 ### 如果添加的模块不在该路径内
 
