--- a/1. Python笔记/4. 模块和包.md
+++ b/1. Python笔记/4. 模块和包.md
@@ -2,26 +2,29 @@
 
 ## 模块
 
+> $\textcolor{red}{模块分为：
+> 系统内置模块，自定义模块，第三方模块}$
+
 ### 引入模块
 
-1. ### 一、引入单个模块
+### 		一、引入单个模块
 
-   > ​	python中通过 import 关键字来引用模块
-   >
-   > ```python
-   > import modulename
-   > ```
-   >
-   > ​	需要用到模块中的函数或变量时通过modulename.function来调用：
-   >
-   > ```python
-   > modulename.function()
-   > modulename.varible
-   > ```
-   >
-   > 
+> ​	python中通过 import 关键字来引用模块
+>
+> ```python
+> import modulename
+> ```
+>
+> ​	需要用到模块中的函数或变量时通过modulename.function来调用：
+>
+> ```python
+> modulename.function()
+> modulename.varible
+> ```
+>
+> 
 
-2. ### 二、引入模块别名
+### 		二、引入模块别名
 
 > ​	引入模块时，在后面使用as关键字创建别名
 >
@@ -31,7 +34,7 @@
 > ```
 >
 
-1. ### 三、引入多个模块
+### 		三、引入多个模块
 
 > 一个import语句，多个模块名使用逗号隔开
 >
@@ -41,11 +44,24 @@
 >
 > 
 
+### 		四、引入单个模块中的函数
 
+> 语法如下：
+>
+> `from modulename import funname |`
+>
+> `import funnacme from modulename`
+>
+> ```python
+> import sayhello from hello
+> from hello import sayhello
+> ```
+>
+> 
 
 ### 模块搜索路径
 
-### 	查看python中默认的模块搜索路径：
+#### 	查看python中默认的模块搜索路径：
 
 ```python
 import sys
@@ -56,7 +72,7 @@ for item in lst
 
 输出路径
 
-![image-20221121110758121](E:\code\PythonCode\Python笔记\iamges\模块搜索路径)
+![image-20221121110758121](.\iamges\模块搜索路径)
 
 ### 如果添加的模块不在该路径内
 
@@ -127,3 +143,7 @@ site.getsitepackages()
 >   2. 否则，如果是作为模块导入，则其`__name__`的值就是模块的名字;
 >   3. .而当一个`.py`文件作为模块被导入时，我们有时候可能不希望一部分代码被运行，这时，可以在代码中采用如下语句来达到目的: `if __name__== __main__` :
 >   4. .因为`.py`文件以模块形式被导入时，`__name__`值就不是，所以，if `__name__` == `__main__`之下的代码块就不会被运行。
+
+## 常用的内置标准模块
+
+![image-20221121145728210](E:\code\PythonCode\PycharmProjects\pythonProject\1. Python笔记\iamges\image-20221121145728210.png)
